# raytracer

./: .clang-format  CMakeLists.txt  config.h.in  kernel_factory.cpp  main.cpp
kernels/: CMakeLists.txt  kernel.h  kernel_vectors.cpp
managers/: CMakeLists.txt  managers.h  threadmanager.cpp  threadmanager.h
sampling/: ranmar.h  sampling.h
system/: atomic.h  intrinsics.h  lock.h  platform.h
tests/: CMakeLists.txt  test_lock_queue.cpp
